# fastapi_ml_create

./: .gitignore  README.md  pyproject.toml  requirements.txt
fastapi_ml_create/: index.html  main.py  train_model.py
