[tool.poetry]
name = "fastapi-ml-create"
version = "0.1.0"
description = ""
authors = ["rajkyutiebaby <rodneyestrada2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
pandas = "^2.2.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
